examples/aws-eks/Container-Root/eks/ops/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ingress_name}
  namespace: ${namespace}
spec:
  rules:
  - host: "${host}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${service_name}
            port:
              number: ${service_port}
